fixed validator's warning

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     
     <div class="list_container">
 
-        <div class="header_list_item"><a href="#home">Home</div>
-            <div class="header_list_item"><a href="#about">About</div>
-            <div class="header_list_item"><a href="#footer">Contact</div>
+        <div class="header_list_item"><a href="#home">Home</a></div>
+            <div class="header_list_item"><a href="#about">About</a></div>
+            <div class="header_list_item"><a href="#footer">Contact</a></div>
 
     </div>
     <div class="header_logo">Landing</div>
