fixed margins and background color for footer

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 
 </section>
 
+<div class="bottom_container">
 <section class="above_footer--container">
 
     <div class="above_footer__text--title">A Price To Suit Everyone</div>
@@ -132,6 +133,7 @@
     <div class="above_footer__text--above_button">See, One price. Simple.</div>
     <div class="link_button"><a href="#">Purchase Now</a></div>
 </section>
+</div>
 
 <footer class="footer_container">
     <div class="footer_top_section--container">
