--- a/index.html
+++ b/index.html
@@ -6,30 +6,28 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Landing page HW-9</title>
+    <title>HW-14 bootstrap</title>
 </head>
 <body>
-   <header class="header_container d-flex justify-content-between">
-    <ul class="nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-      </ul>
+  <div class="wrapper mx-auto my-0">
+    
+    <header class="d-flex justify-content-between m-0 align-items-center">
+      
+     <ul class="d-flex justify-content-between list-unstyled align-items-center">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+     </ul>
 
-      <div class="logo"><img src="img/logo.png" alt=""></div>
+     <div>
+      <img src="img/logo.png" alt="logo">
+     </div>
 
-      <div class="link_button"><a href="#">Buy Now</a></div>
+     <div class="header_link_button link_button"><a href="#">Buy Now</a></div>
 
     </header>
 
 
-
-
+  </div>
 </body>
 </html>
